# neural-net-rs

./: .cursorrules  .gitignore  .windsurfrules  AGENTS.md  Cargo.toml  README.md  config.json  read_binary.rb
.cargo/: config.toml
.cursor/rules/: random.mdc  testing.mdc
.zed/: settings.json
autograd/: Cargo.toml
autograd/src/: broadcast.rs  gradient_check.rs  graph.rs  lib.rs  manual_backprop.rs  ops.rs  tensor.rs  xor.rs
consumer_binary/: Cargo.toml  config.json
consumer_binary/src/: lib.rs  main.rs  mnist.rs  training.rs
gpt/: Cargo.toml
gpt/src/: data.rs  inference.rs  lib.rs  main.rs  matrix.rs  model.rs  neural_network.rs  optimizer.rs  persistence.rs  tokenizer.rs  value.rs
matrix/: Cargo.toml
matrix/src/: lib.rs  macros.rs  matrix.rs
mnist/: Cargo.toml
mnist-demo/: Cargo.toml
mnist-demo/src/: confusion.rs  main.rs  predict.rs
mnist-demo/static/: index.html  index.js
mnist/src/: evaluation.rs  lib.rs  mnist.rs  pipeline.rs  standardize.rs  standardized_mnist.rs  test_sync.rs
neural-network/: Cargo.toml
neural-network/benches/: network_benchmark.rs
neural-network/src/: activations.rs  autograd_forward.rs  layer.rs  lib.rs  network.rs  network_config.rs  regularization.rs  training_history.rs
train_mnist/: Cargo.toml
train_mnist/src/: main.rs  mnist.rs  training.rs
training/: Cargo.toml
training/src/: lib.rs  training.rs  training_config.rs  training_history.rs
