[package]
edition = "2024"

name = "autograd"
version = "0.1.0"

[dependencies]
approx = "0.5.1"
ndarray = { version = "0.16", features = [
    "serde",
    "rayon",
    "blas",
    "matrixmultiply-threading",
] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }

[lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
unhandled_errors = "deny"
unreachable = "deny"
undocumented_unsafe_blocks = "deny"
unwrap_in_result = "deny"
ok_expect = "deny"
