cargo-features = ["edition2024"]

[package]
name = "consumer_binary"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"

[dependencies]
neural-network = { path = "../neural-network" }
serde_json = "1.0"
