[package]
name = "consumer_binary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"

[[bin]]
name = "guess_digit"
path = "src/bin/guess_digit.rs"

[dependencies]
neural-network = { path = "../neural-network" }
mnist = { path = "../mnist" }
matrix = { path = "../matrix" }
serde_json = "1.0"
indicatif = "0.17"
image = "0.25"
anyhow = "1.0"

[lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
unhandled_errors = "deny"
unreachable = "deny"
undocumented_unsafe_blocks = "deny"
unwrap_in_result = "deny"
ok_expect = "deny"
