[package]
name = "gpt"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gpt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1.13"

[lints]
workspace = true
