[package]
name = "matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
approx = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
ndarray = { version = "0.15", features = [
    "serde",
    "rayon",
    "blas",
    "matrixmultiply-threading",
] }
ndarray-rand = "0.14"
openblas-src = { version = "0.10", features = ["cblas", "system"] }
