[package]
name = "matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
approx = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
ndarray = { version = "0.16", features = [
    "serde",
    "rayon",
    "blas",
    "matrixmultiply-threading",
] }
ndarray-rand = "0.15"
openblas-src = { version = "0.10", features = ["cblas", "system"] }

[lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
unhandled_errors = "deny"
unreachable = "deny"
undocumented_unsafe_blocks = "deny"
unwrap_in_result = "deny"
ok_expect = "deny"
