[package]
name = "mnist-demo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mnist-demo"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
matrix = { path = "../matrix" }
mnist = { path = "../mnist" }
neural-network = { path = "../neural-network" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs"] }

[lints]
workspace = true
