[package]
name = "neural-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.20.2"
matrix = { path = "../matrix" }
approx = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = { version = "0.15", features = ["serde", "rayon"] }
rayon = "1.8"
rand = "0.8"
indicatif = "0.17.11"

[dev-dependencies]
tempfile = "3.10.1"
