[package]
edition = "2024"
name = "neural-network"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.20.2"
matrix = { path = "../matrix" }
approx = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = { version = "0.16", features = ["serde", "rayon"] }
rayon = "1.8"
rand = "0.10"
indicatif = "0.17.11"
tempfile = "3.10.1"

[dev-dependencies]
tempfile = "3.10.1"
criterion = "0.5"

[[bench]]
name = "network_benchmark"
harness = false

[lints]
workspace = true
