[package]
name = "train_mnist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix = { path = "../matrix" }
neural-network = { path = "../neural-network" }
rand = "0.8"
indicatif = { version = "0.17", features = ["rayon"] }
thiserror = "1.0"
image = "0.24"
anyhow = "1.0"
rayon = "1.8"

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.0"
predicates = "3.0"
