[package]
name = "train_mnist"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix = { path = "../matrix" }
neural-network = { path = "../neural-network" }
mnist = { path = "../mnist" }
training = { path = "../training" }
rand = "0.9.0"
indicatif = { version = "0.17.11" }
thiserror = "2.0.12"
image = "0.25.5"
anyhow = "1.0.97"

[dev-dependencies]
tempfile = "3.19.0"
assert_fs = "1.1.2"
predicates = "3.1.3"
