[package]
name = "training"
version = "0.1.0"
edition = "2024"

[dependencies]
mnist = { path = "../mnist" }
indicatif = { version = "0.17.11", features = ["rayon"] }
matrix = { path = "../matrix" }
neural-network = { path = "../neural-network" }
rand = "0.9.0"
thiserror = "2.0.12"
rayon = "1.10.0"
